--- a/OOP/Date and Time.ipynb
+++ b/OOP/Date and Time.ipynb
@@ -57,28 +57,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'datetime' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-c68cf2f1b083>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# finding the current date and time\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mday\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmonth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhour\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mminute\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 9 2020\n",
+      "23 22 2020\n"
      ]
     }
    ],
    "source": [
     "# finding the current date and time\n",
-    "import data\n",
+    "import datetime\n",
     "\n",
     "dt = datetime.datetime.today()\n",
     "print(dt.day, dt.month, dt.year)\n",
     "print(dt.hour, dt.minute, dt.year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combining Date and Time\n",
+    "\n",
+    "from datetime import *\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = date(2018, 7,21)\n",
+    "t = time(12,45)\n",
+    "dt = datetime.combine(d,t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 7, 21, 12, 45)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-07-21 12:45:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sorting date\n",
+    "from datetime import *\n",
+    "l = []\n",
+    "\n",
+    "d1 = date(2016, 8, 12)\n",
+    "d2 = date(2017, 8, 12)\n",
+    "d3 = date(2018, 8, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.append(d1)\n",
+    "l.append(d2)\n",
+    "l.append(d3)\n",
+    "\n",
+    "l.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-08-12\n",
+      "2017-08-12\n",
+      "2018-08-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in l:\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-08-12\n",
+      "2017-08-12\n",
+      "2018-08-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sleep\n",
+    "from datetime import date\n",
+    "import time \n",
+    "\n",
+    "l = []\n",
+    "\n",
+    "d1 = date(2016, 8, 12)\n",
+    "d2 = date(2017, 8, 12)\n",
+    "d3 = date(2018, 8, 12)\n",
+    "l.append(d1)\n",
+    "l.append(d2)\n",
+    "l.append(d3)\n",
+    "\n",
+    "l.sort()\n",
+    "time.sleep(3)\n",
+    "\n",
+    "for d in l:\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016-08-12\n",
+      "2017-08-12\n",
+      "2018-08-12\n",
+      "execution -  -0.0003562000000556509\n"
+     ]
+    }
+   ],
+   "source": [
+    "# performance:\n",
+    "from datetime import date\n",
+    "import time \n",
+    "\n",
+    "start_time = time.perf_counter()\n",
+    "l = []\n",
+    "\n",
+    "d1 = date(2016, 8, 12)\n",
+    "d2 = date(2017, 8, 12)\n",
+    "d3 = date(2018, 8, 12)\n",
+    "l.append(d1)\n",
+    "l.append(d2)\n",
+    "l.append(d3)\n",
+    "\n",
+    "l.sort()\n",
+    "#time.sleep(3)\n",
+    "\n",
+    "for d in l:\n",
+    "    print(d)\n",
+    "    \n",
+    "end_time = time.perf_counter()\n",
+    "print('execution - ', start_time - end_time)"
    ]
   },
   {
